--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 
+
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -10,6 +11,7 @@
     <link rel="stylesheet" href="css/app.css" />
     <link rel="icon" type="image/png" href="favicon.png" />
     <link href="UserRegClient.styles.css" rel="stylesheet" />
+    <link rel="stylesheet" href="/css/material-base.css" />
 </head>
 
 <body>
