--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="css/app.css" />
     <link rel="icon" type="image/png" href="favicon.png" />
     <link href="UserRegClient.styles.css" rel="stylesheet" />
-    <link rel="stylesheet" href="/css/material-base.css" />
+    <link rel="stylesheet" href="UserRegClient/wwwroot/css/material-base.css" />
 </head>
 
 <body>
